--- a/user-interface/frontend/themes/datamanager/components/vaadin-custom.css
+++ b/user-interface/frontend/themes/datamanager/components/vaadin-custom.css
@@ -64,6 +64,7 @@ vaadin-menu-bar-item.transparent-icon::part(checkmark)::before {
   color: transparent;
 }
 
+.input-with-label > vaadin-text-field,
 vaadin-text-field.input-with-label {
-  padding: 0 0;
+  padding-top: 0; /*remove for label placement*/
 }
