--- a/user-interface/frontend/themes/datamanager/components/variables.css
+++ b/user-interface/frontend/themes/datamanager/components/variables.css
@@ -32,12 +32,17 @@ First some general property definitions
   --primary-text-color: hsl(214, 100%, 43%);
   --secondary-text-color: hsla(214, 42%, 18%, 0.69);
   --tertiary-text-color: hsla(214, 45%, 20%, 0.52);
-  --icon-color-primary: var(--primary-color);
-  --icon-color-info: rgba(22, 118, 243, 1);
-  --icon-color-error: rgba(255, 66, 56, 1);
-  --icon-color-success: rgba(21, 193, 93, 1);
-  --icon-color-warning: rgba(254, 201, 1, 1);
-  --icon-color-default: rgba(28, 46, 69, 0.6);
+  --error-text-color: hsl(3, 89%, 42%);
+  --error-background-color: var(--error-color-10pct);
+  --error-color-50pct: hsla(3, 85%, 49%, 0.5);
+  --error-color-10pct: hsla(3, 85%, 49%, 0.1);
+
+  --primary-icon-color: var(--primary-color);
+  --info-icon-color: rgba(22, 118, 243, 1);
+  --error-icon-color: rgba(255, 66, 56, 1);
+  --success-icon-color: rgba(21, 193, 93, 1);
+  --warning-icon-color: rgba(254, 201, 1, 1);
+  --icon-color: rgba(28, 46, 69, 0.6);
   --label-font-size: 0.875rem;
   --icon-size-xs: 1rem;
   --icon-size-s: 1.25rem; /*--lumo-icon-size-s*/
