Apply layout changes to user profile page (#1265)
Adjusts the layout to align with the latest UI/UX requirements.

--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -149,6 +149,39 @@ Body text
 
 
 /***************************
+Font classes that provide more flexibility
+***************************/
+
+.text-size-s {
+  font-size: var(--lumo-font-size-s);
+}
+
+.text-size-m {
+  font-size: var(--lumo-font-size-m);
+}
+
+.text-contrast-70pct {
+  color: var(--lumo-contrast-70pct)
+}
+
+.text-contrast-90pct {
+  color: var(--lumo-contrast-90pct)
+}
+
+.text-line-height-s {
+  line-height: var(--lumo-line-height-s);
+}
+
+.text-line-height-m {
+  line-height: var(--lumo-line-height-m);
+}
+
+.text-bold {
+  font-weight: bold;
+}
+
+
+/***************************
 Padding & gaps
 ***************************/
 
@@ -180,6 +213,11 @@ Padding & gaps
 .padding-left-right-07 {
   padding-left: var(--spacing-07);
   padding-right: var(--spacing-07);
+}
+
+.padding-left-right-10 {
+  padding-left: var(--spacing-10);
+  padding-right: var(--spacing-10);
 }
 
 .padding-top-03 {
@@ -221,6 +259,11 @@ Padding & gaps
 .padding-top-bottom-07 {
   padding-top: var(--spacing-07);
   padding-bottom: var(--spacing-07);
+}
+
+.padding-top-bottom-10 {
+  padding-top: var(--spacing-10);
+  padding-bottom: var(--spacing-10);
 }
 
 .gap-02 {
@@ -286,7 +329,8 @@ Sections
 /*
 Dialog flavours
  */
-.dialog-app {}
+.dialog-app {
+}
 
 .dialog-app,
 .button-text,
@@ -294,11 +338,14 @@ Dialog flavours
   margin: 0;
 }
 
-.dialog-small {}
+.dialog-small {
+}
 
-.dialog-medium {}
+.dialog-medium {
+}
 
-.dialog-large {}
+.dialog-large {
+}
 
 .dialog-small::part(overlay) {
   width: var(--dialog-width-small);
@@ -321,18 +368,18 @@ Dialog flavours
   max-height: var(--dialog-height-max-large);
 }
 
-.dialog-app::part(header)  {
+.dialog-app::part(header) {
   padding: 0;
   border-bottom-style: solid;
   border-bottom-color: rgba(26, 56, 96, 0.1);
   border-bottom-width: 1px;
 }
 
-.dialog-app::part(content)  {
+.dialog-app::part(content) {
   padding: 0;
 }
 
-.dialog-app::part(footer)  {
+.dialog-app::part(footer) {
   padding: 0;
   background-color: white;
   border-top-style: solid;
@@ -437,6 +484,7 @@ Icons
 .icon-color-error {
   color: var(--icon-color-error);
 }
+
 .icon-text-white {
   color: white;
 }
@@ -495,6 +543,25 @@ Layout
   justify-content: space-between;
 }
 
+.flex-01 {
+  flex: 1;
+}
+
+.flex-03 {
+  flex: 3;
+}
+
+.fixed-width-1000px{
+  width: 1000px;
+  min-width: 1000px;
+}
+
+.white-space-nowrap{
+  white-space: nowrap;
+}
+
+
+
 /**************************
 Boxes
 ****************************/
@@ -504,6 +571,13 @@ Boxes
   border-style: solid;
   border-width: 1px;
   border-radius: var(--spacing-02);
+}
+
+.account-box {
+  border-width: 1px;
+  border-color: var(--lumo-contrast-20pct);
+  border-radius: var(--spacing-02);
+  border-style: solid;
 }
 
 /****************************
