add bold css class

--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -62,6 +62,10 @@ Heading
   font-weight: var(--font-weight-regular);
 }
 
+.bold {
+  font-weight: var(--font-weight-bold);
+}
+
 /*endregion*/
 
 .field-label-text {
