replace lumo var with own variable definition
Replaces the lumo variable with a custom variable. The custom variable has the same value as the lumo variable without depending on lumo and makes editing css in editors easier (as the variable is defined in the project scope and not only after compilation)

--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -1267,7 +1267,7 @@ Older stuff -
 .input-label:has(~ .input-with-label:hover) /*the label is before the input*/,
 .input-with-label:hover ~ .input-label /*the label is after the input*/
 {
-  color: var(--lumo-contrast);
+  color: var(--shade-color);
 }
 
 .input-label:has(~ .input-with-label:focus-within) /*the label is before the input*/,
