--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -98,37 +98,38 @@ Heading
   font-weight: var(--font-weight-semi-bold);
 }
 
-.font-size-small {
+.title-size-small {
   font-size: var(--lumo-font-size-l); /*1.125rem*/
 }
 
-.font-size-medium {
+.title-size-medium {
   font-size: var(--lumo-font-size-xl); /*1.375rem*/
 }
 
-.font-size-large {
+.title-size-large {
   font-size: var(--lumo-font-size-xxl); /*1.75rem*/
 }
 
-/*fixme clarify with shraddha what sizes to take*/
-.text-size-s {
+.font-size-s {
   font-size: var(--lumo-font-size-s);
 }
 
-.text-size-m {
+.font-size-m {
   font-size: var(--lumo-font-size-m);
 }
 
 .text-contrast-70pct {
-  color: var(--lumo-contrast-70pct)
+  color: var(--shade-color-70pct)
 }
 
 .text-contrast-90pct {
   color: var(--lumo-contrast-90pct)
 }
+
 .text-line-height-s {
   line-height: var(--lumo-line-height-s);
 }
+
 .text-line-height-m {
   line-height: var(--lumo-line-height-m);
 }
@@ -832,7 +833,7 @@ Colors
 }
 
 .button-icon-only {
-  color: var(--tertiary-text-color);
+  color: var(--icon-color);
   background-color: transparent;
 }
 
@@ -847,6 +848,9 @@ Colors
 /***************************
 Icons
 ****************************/
+.icon-color {
+  color: var(--icon-color);
+}
 
 .icon-color-warning {
   color: var(--warning-icon-color)
@@ -1162,10 +1166,6 @@ Older stuff -
 .fixed-width-1000px{
   width: 1000px;
   min-width: 1000px;
-}
-
-.white-space-nowrap{
-  white-space: nowrap;
 }
 
 .account-box {
