--- a/user-interface/frontend/themes/datamanager/components/variables.css
+++ b/user-interface/frontend/themes/datamanager/components/variables.css
@@ -59,7 +59,7 @@ First some general property definitions
   --error-icon-color: rgba(255, 66, 56, 1);
   --success-icon-color: rgba(21, 193, 93, 1);
   --warning-icon-color: rgba(254, 201, 1, 1);
-  --icon-color: rgba(28, 46, 69, 0.6);
+  --icon-color: var(--shade-color-60pct);
   --label-font-size: 0.875rem;
   --icon-size-xs: 1rem;
   --icon-size-s: 1.25rem; /*--lumo-icon-size-s*/
