fix border colors
borders in dialogs have a specific color.
borders can be specifically set to not have any color.

Co-authored-by: Shraddha Pawar <Shraddha0903@users.noreply.github.com>

--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -722,12 +722,20 @@ Colors
 /*endregion*/
 
 /*region Dialogs*/
+
+/*region Custom Stylings*/
+/*This region contains custom styling that should be applied to components when they appear in a dialog*/
+
+.dialog-app .border {
+  border-color: var(--border-color-dialog);
+}
+
+/*endregion*/
 /*region Sections*/
 .dialog-section {
   display: flex;
   flex-direction: column;
 }
-
 /*endregion*/
 /*region Dialog Flavors*/
 
@@ -1079,6 +1087,14 @@ Icons
 
 .border-color-default {
   border-color: var(--border-color-default);
+}
+
+.border-color-light {
+  border-color: var(--border-color-light);
+}
+
+.border-color-none {
+  border-color: transparent;
 }
 
 .border-color-dialog {
