--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -856,7 +856,7 @@ Icons
 }
 
 .icon-color-success {
-  color: var(--icon-color-success);
+  color: var(--success-icon-color);
 }
 
 .icon-color-error {
