Implement missing eperimental variable functionality (#1274)
* Preserve order of levels

* make it compile again

* wip

* wip

* section off regions and add borders

* Replace ontology-term CSS class

* Remove CSS classes

Replace `.vertical-list` by `.flex-vertical .width-full`
Replace `.trailing-margin-large` by `.margin-bottom-07`
Replace `.trailing-margin-normal` by `.margin-bottom-05`
Replace `.trailing-margin-small` by `.margin-bottom-03`

* wip

* add missing variables

* replace lumo with custom variables

* move ButtonFactory

* add icon button factory method

* update demo

* Fix label css

* replace with classes

* introduce delete event

* wip

* add restoration option for deleted variables

* Add Nullable annotation to DialogBody.java#with method

* remove test button

* Fix value handling of level field

* Add paste behaviour

* address code smells

* hide public constructor

* simplify memento interface

removes Speculative Generality

* Handle validation

* Make InputValidation combinable

* require all snapshots to be serializable

* adapt validation to validate multivariable constraints

adds validation for duplicate variable names.

* wip

* Add DragDropList.java

* Push UI code

* extract classes and add add dialog

* Load values and call the service

missing check for deleted variables and changes to levels.
Adding, deleting, renaming and changing the unit of a variable are functional now.

* remove unused method

* Add empty input if no variables exist

* Add variable deletion confirm dialog

* add bold css class

* add tooltip to locked levels

Co-authored-by: Shraddha Pawar <Shraddha0903@users.noreply.github.com>

* extract change records

* add scroll css classes

* make drag-drop configurable

* replace lumo var with own variable definition

Replaces the lumo variable with a custom variable. The custom variable has the same value as the lumo variable without depending on lumo and makes editing css in editors easier (as the variable is defi

--- a/user-interface/frontend/themes/datamanager/components/span.css
+++ b/user-interface/frontend/themes/datamanager/components/span.css
@@ -2,7 +2,7 @@
   display: inline-flex;
   border-radius: var(--lumo-border-radius-m);
   align-items: center;
-  padding-inline: var(--lumo-space-s);
+  padding-inline: var(--spacing-03);
   justify-content: space-between;
   border: 1px solid var(--lumo-contrast-20pct);
   column-gap: var(--lumo-space-l);
@@ -12,7 +12,7 @@
 
 .experiment-list-item {
   display: flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   font-size: var(--lumo-font-size-l)
 }
 
@@ -28,13 +28,13 @@
 .info-box {
   display: inline-flex;
   border-radius: var(--lumo-border-radius-m);
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   background-color: var(--lumo-contrast-5pct);
   align-items: center;
   width: fit-content;
   padding-inline: var(--lumo-space-m);
-  padding-top: var(--lumo-space-s);
-  padding-bottom: var(--lumo-space-s);
+  padding-top: var(--spacing-03);
+  padding-bottom: var(--spacing-03);
   font-size: small;
 }
 
@@ -52,8 +52,8 @@
   gap: var(--lumo-space-l);
   align-items: center;
   padding-inline: var(--lumo-space-m);
-  padding-top: var(--lumo-space-s);
-  padding-bottom: var(--lumo-space-s);
+  padding-top: var(--spacing-03);
+  padding-bottom: var(--spacing-03);
   box-sizing: border-box;
   background-color: var(--lumo-base-color);
   border-radius: var(--lumo-border-radius-m);
@@ -72,14 +72,14 @@
 .registration-section {
   display: flex;
   flex-direction: column;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   align-items: center;
   width: 100%;
 }
 
 .registration-section .link {
   display: inline-flex;
-  gap: var(--lumo-space-s);
+  gap: var(--spacing-03);
   font-weight: 500;
 }
 
@@ -182,7 +182,7 @@ span.inline {
 
 .tag.error {
   background-color: var(--lumo-error-color-10pct);
-  color: var(--lumo-error-color);
+  color: var(--error-color);
 }
 
 .tag.primary {
