--- a/user-interface/frontend/themes/datamanager/components/button.css
+++ b/user-interface/frontend/themes/datamanager/components/button.css
@@ -8,7 +8,7 @@
 
 .button-bar {
   display: inline-flex;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
 }
 
 .navigation-button .button {
@@ -28,8 +28,8 @@ vaadin-button.primary {
 }
 
 vaadin-button.danger {
-  background-color: var(--lumo-error-color, var(--lumo-error-color));
-  color: var(--lumo-button-primary-color, var(--lumo-primary-contrast-color));
+  background-color: var(--error-color);
+  color: var(--error-text-contrast-color);
 }
 
 vaadin-button.danger[focus-ring] {
@@ -38,7 +38,7 @@ vaadin-button.danger[focus-ring] {
 
 /* Styles recreated from vaadin lumo theme */
 vaadin-button[disabled] {
-  background-color: var(--lumo-contrast-30pct);
+  background-color: var(--shade-color-30pct);
   color: var(--lumo-base-color);
 }
 
@@ -58,9 +58,4 @@ vaadin-button.tertiary {
 
 vaadin-button {
   cursor: pointer;
-}
-
-vaadin-button[theme~="tertiary"] vaadin-icon,
-vaadin-button[theme~="tertiary-inline"] vaadin-icon {
-  color: var(--lumo-tertiary-text-color)
 }
