--- a/user-interface/frontend/themes/datamanager/components/custom.css
+++ b/user-interface/frontend/themes/datamanager/components/custom.css
@@ -20,6 +20,7 @@
 @import "vaadin-custom.css";
 @import "virtuallist.css";
 @import "toast.css";
+@import "grid-templates.css";
 
 vaadin-avatar-group vaadin-avatar,
 .user-avatar {
@@ -32,6 +33,6 @@ vaadin-avatar-group vaadin-avatar,
   justify-content: start;
   align-items: center;
   flex-direction: row;
-  column-gap: var(--lumo-space-s);
+  column-gap: var(--spacing-03);
   row-gap: initial;
 }
