--- a/user-interface/frontend/themes/datamanager/components/variables.css
+++ b/user-interface/frontend/themes/datamanager/components/variables.css
@@ -25,8 +25,8 @@ First some general property definitions
   --font-weight-medium: 500;
   --font-weight-semi-bold: 600;
   --font-weight-bold: 700;
-  --border-color-default: hsla(214, 50%, 22%, 0.26);
-  --border-color-light: rgba(26, 56, 96, 0.1);
+  --border-color-default: var(--shade-color-30pct);
+  --border-color-light: var(--shade-color-10pct);
   --border-color-dialog: var(--border-color-light);
   /*error color for non-textual elements*/
   --error-color: hsla(3, 85%, 48%, 1);
@@ -37,12 +37,6 @@ First some general property definitions
   /*text on error-color background*/
   --error-text-contrast-color: rgb(255, 255, 255);
 
-  --success-color: rgba(21, 193, 93, 1);
-  --primary-color: hsl(214, 100%, 48%);
-  --primary-color-10pct: hsla(214, 100%, 48%, 0.2);
-  --primary-color-20pct: hsla(214, 100%, 48%, 0.2);
-  --primary-contrast-color: rgb(255, 255, 255);
-  --primary-text-color: hsl(214, 100%, 43%);
   --shade-color-5pct: hsla(214, 61%, 25%, 0.05);
   --shade-color-10pct: hsla(214, 57%, 24%, 0.1);
   --shade-color-20pct: hsla(214, 53%, 23%, 0.16);
@@ -54,10 +48,34 @@ First some general property definitions
   --shade-color-80pct: hsla(214, 41%, 17%, 0.83);
   --shade-color-90pct: hsla(214, 40%, 16%, 0.94);
   --shade-color: hsl(214, 35%, 15%);
-  --background-contrast-color-5pct: var(--shade-color-5pct);
-  --background-contrast-color-10pct: var(--shade-color-10pct);
+
+  --success-color: rgba(21, 193, 93, 1);
+  /*Base text-color variables */
+  --success-text-color: hsla(145, 85%, 25%, 1);
+  --warning-text-color: hsla(36, 100%, 30%, 1);
+  --warning-color: hsla(36, 100%, 50%, 1);
+  --primary-color: hsl(214, 100%, 48%);
+  --primary-color-10pct: hsla(214, 100%, 48%, 0.2);
+  --primary-color-20pct: hsla(214, 100%, 48%, 0.2);
+  --primary-contrast-color: rgb(255, 255, 255);
+  --primary-text-color: hsl(214, 100%, 43%);
   --secondary-text-color: hsla(214, 42%, 18%, 0.69);
   --tertiary-text-color: hsla(214, 45%, 20%, 0.52);
+
+  /*Semantic text-color variables */
+  --heading-text-color: var(--shade-color);
+  --body-text-color: var(--shade-color-90pct);
+  --field-label-text-color: var(--shade-color-90pct);
+  --input-field-text-color: var(--shade-color-90pct);
+  --list-item-text-color: var(--shade-color-90pct);
+  --button-text-color: var(--primary-text-color); /*text color on secondary and tertiary buttons*/
+  --button-text-color-primary: var(--primary-contrast-color); /*text color on primary button */
+  --button-text-color-error: var(--error-text-color);
+
+  /* Background style variables */
+  --background-color-5pct: var(--shade-color-5pct);
+  --background-color-10pct: var(--shade-color-10pct);
+
   --primary-icon-color: var(--primary-color);
   --info-icon-color: rgba(22, 118, 243, 1);
   --error-icon-color: var(--error-color);
