First working raw data filter grid

--- a/user-interface/frontend/themes/datamanager/components/main.css
+++ b/user-interface/frontend/themes/datamanager/components/main.css
@@ -286,7 +286,8 @@
 
 
 .main.raw-data .raw-data-details-component {
-  grid-area: rawdatadetails
+  grid-area: rawdatadetails;
+  height: 90%;
 }
 
 .main.raw-data .raw-data-main-content {
